--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,1 +1,15 @@
-spring.application.name=demo
+spring.application.name=user-management
+
+# 数据库配置
+spring.datasource.url=jdbc:mysql://localhost:3306/user_management?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# MyBatis配置
+mybatis.mapper-locations=classpath:mapper/*.xml
+mybatis.type-aliases-package=com.example.demo.entity
+mybatis.configuration.map-underscore-to-camel-case=true
+
+# 日志配置
+logging.level.com.example.demo.mapper=debug
